# python-cli

./: DECISIONS.md  README.md  bad.json  benchmark.py  cli.py  command_router.py  exceptions.py  filesystem.py  main.py  pyproject.toml  test.json
commands/: checksum.py  grep.py  json_pretty.py  read.py  replace.py
tests/: test_checksum_command.py  test_filesystem.py  test_grep_command.py  test_json_pretty_command.py  test_read_command.py  test_replace_command.py
